[gd_scene load_steps=3 format=3 uid="uid://dpin0lfjdk3g4"]

[ext_resource type="Script" uid="uid://dy55nkd7je4fi" path="res://scripts/loaded_image_item.gd" id="1_1a6df"]
[ext_resource type="Texture2D" uid="uid://cxfyek8t0dtun" path="res://The Legend of Zelda Overworld (Oracle of Seasons-Style) - MisterMike.png" id="2_1a6df"]

[node name="LoadedImageItem" type="Control"]
custom_minimum_size = Vector2(90, 110)
layout_mode = 3
anchors_preset = 0
offset_right = 90.0
offset_bottom = 110.0
mouse_default_cursor_shape = 2
script = ExtResource("1_1a6df")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImagePreview" type="TextureRect" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("2_1a6df")
expand_mode = 1

[node name="FileName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "OriginalTileset.jpg"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
